pedidos-lembrancinhas/infra/kubernetes/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: pedido-lembrancinha-app
  namespace: pedido-lembrancinha
spec:
  selector:
    app: pedido-lembrancinha-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
