pedidos-lembrancinhas/infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedido-lembrancinha
  namespace: pedido-lembrancinha
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  ingressClassName: nginx
  rules:
    - host: pedido-lembrancinha.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pedido-lembrancinha-app
                port:
                  number: 80
